...
      </View>
    );
  }

  return (
    <ScrollView
      testID="community-channels"
      contentContainerStyle={styles.content}
      refreshControl={
        <RefreshControl
          refreshing={channels.isRefetching}
          onRefresh={() => void channels.refetch()}
        />
...
